# FlowLab-Desktop

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  connections_page.ui  dnspage.ui  logswindow.ui  mainwindow.ui  tls_page.ui  vcpkg.json
include/: client.h  client_forwarder.h  connection.h  connection_manager.h  connection_manager.h.unc-backup.md5~  connection_manager.h.unc-backup~  connections_page.h  dns_entry.h  dns_manager.h  dnspage.h  file_writer.h  forwarder.h  logger.h  logswindow.h  mainwindow.h  ndpi.h  packet_utils.h  pcap_writer.h  protocol.h  proxy_service.h  remote_socket_status.h  server_forwarder.h  socket_utils.h  sockets.h  syntax_highlighter.h  tcp_connection.h  tcp_connection.h.unc-backup.md5~  tcp_connection.h.unc-backup~  tcp_status.h  tls_page.h  udp_connection.h
lib/include/ndpi/: ndpi_config.h  ndpi_config.h.in  ndpi_define.h
lib/lib-linux/cmake/pcapplusplus/: PcapPlusPlusConfig.cmake  PcapPlusPlusConfigVersion.cmake  PcapPlusPlusTargets-release.cmake  PcapPlusPlusTargets.cmake
lib/lib/cmake/pcapplusplus/: PcapPlusPlusTargets-release.cmake
src/: client_forwarder.cpp  connection.cpp  connection_manager.cpp  connections_page.cpp  dns_manager.cpp  dnspage.cpp  forwarder.cpp  logger.cpp  logswindow.cpp  main.cpp  mainwindow.cpp  packet_utils.cpp  proxy_service.cpp  server_forwarder.cpp  socket_utils.cpp  sockets.cpp  syntax_highlighter.cpp  tcp_connection.cpp  tls_page.cpp  udp_connection.cpp
